tests/org.eclipse.php.core.tests/workspace/errors/php5/testTypeReferenceError4.pdtt
--TEST--
Bug 531379 - Mark @param callback as well known type
--FILE--
<?php
/**
 * @param callback $param1
 * @return callback
 */
function foo($param1)
{
}
--EXPECT--
